1.0-devel
=====================

 * Fixed http://plone.org/collector/4218 ATCT now uses normalizeString from
   PloneTool. ATCT's cleanupFilename method has been removed.
   [hannosch]

 * Fixed http://plone.org/collector/4170 Link checking is crazy and [ 1197068 ]
   [hannosch]

 * made constraintypes default AQUIRE mode works with portal_factory
   [panjunyong]

 * Added Five/Zope3 interface bridges
   [tiran]

 * Disabled text/x-python and text/plain-pre by default. Customize the
   atcontenttypes.conf if you need them.
   [tiran]
   
 * Removed relatedItems field from folderish objects.
   [tiran]
   
 * Made download tab for File and Image invisible.
   [tiran]

 * Fixed __bobo_traverse__ in ATImage, security check was unnecessary and
   required anonymous to have 'View' in order for anyone to use it.
   [alecm]

 * Yet another migration optimization: Added catalogpatch to the migration
   system. The patch is altering portal_catalog.catalog_object and
   uncatalog_object. Read migration/catalogpatch.py for more informations.
   The catalog patch can be enabled by passing use_catalog_patch=True to
   the migration functions.
   [tiran]

 * Fixed last bit of http://plone.org/collector/3060  Don't let missing CMF
   types crash portal_atct.disableCMFTypes().
   [alecm]

 * Enhanced migration code:
    o CatalogWalkerWithLevel is now based on ExtendedPathIndex
      and behaves like CatalogWalker.
    o Added walker arguments for transaction size, full transactions.
      and savepoints. The migration system can use ZODB savepoints to
      roll back to a sane point.
    o Migrators are also registered by (src,dst) meta_type.
    o The new function migratePortalType() can be used to migrate a single
      content type by just passing the src and dst portal type to the
      function. Both portal types must be registerd in portal_types and a
      migration from src to dst meta_type must exist.
   [tiran]
