@@ -423,6 +423,11 @@ class ATCTFileContent(ATCTContent):
             message="Saved changes."
             return self.manage_main(self,REQUEST,manage_tabs_message=message)
 
+    def _cleanupFilename(self, filename):
+        """a seperate method to make it better for patch
+	"""
+        return getToolByName(self, 'plone_utils').normalizeString(filename)
+
     def _setATCTFileContent(self, value, **kwargs):
         """Set id to uploaded id
         """
@@ -431,7 +436,7 @@ class ATCTFileContent(ATCTContent):
         field.set(self, value, **kwargs) # set is ok
         if self._isIDAutoGenerated(self.getId()):
             filename = field.getFilename(self, fromBaseUnit=False)
-            clean_filename = getToolByName(self, 'plone_utils').normalizeString(filename)
+            clean_filename = self._cleanupFilename(filename)
             request_id = self.REQUEST.form.get('id')
             if request_id and not self._isIDAutoGenerated(request_id):
                 # request contains an id
